# qt-textviewer

./: .gitignore  .gitmodules  CMakeLists.txt  FileMap.cpp  FileMap.h  Lines.cpp  Lines.h  README.md  TODO.md  Util.cpp  ViewLogic.cpp  ViewLogic.h  dialog.cpp  dialog.h  main.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
expect/: empties_first20w8.txt  max_first16m40w100.txt  max_simpl_first21m40w100.txt  midlines_first20wrap10.txt  tabs.txt  tabs.wordwrap.txt  tabs.wrap.txt  utf8_first10w10.txt  utf8_first10w10X10.txt  utf8_first10w10X12.txt  utf8_first10w10X40.txt  utf8_first20wrap10.txt  utf8_first40m10.txt  wordwrap_first11ww10.txt
logic/: Cache.cpp  Cache.h  CacheMax.cpp  CacheMax.h  CacheX.cpp  CacheX.h  Lines.cpp  Lines.h  Util.cpp  Util.h  ViewLogic.cpp  ViewLogic.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
misc/: Selection.cpp  Selection.h
test/: beginWiki.xml  empties.txt  emshortwrap.txt  max.txt  midlines.txt  selection.txt  shortwrap.txt  tabs.txt  utf8.txt  wordwrap.txt
wid/: PaintArea.cpp  PaintArea.h  Selection.cpp  Selection.h  TextViewer.cpp  TextViewer.h
